--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@thirdweb-dev/react": "^2.6.3",
+    "@thirdweb-dev/sdk": "^2.3.36",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "ethers": "^5.6.9",
     "framer-motion": "^7.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.3.0",
     "sass": "^1.52.1"
   },
   "devDependencies": {
