chore: update env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_NFT_CONTRACT_ADDRESS=
+NEXT_PUBLIC_TOKEN_CONTRACT_ADDRESS=
+NEXT_PUBLIC_STAKING_CONTRACT_ADDRESS=
+NEXT_PUBLIC_SECOND_MINT_AFTOKEN_BALANCE=
+NEXT_PUBLIC_SECOND_MINT_NFT_CONTRACT=
+NEXT_PUBLIC_SECOND_MINT_COLLECTION_NAME=
