--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
     "sass": "^1.52.1"
   },
