extract background color to ENV variable

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_STAKING_CONTRACT_ADDRESS=
 NEXT_PUBLIC_SECOND_MINT_AFTOKEN_BALANCE=
 NEXT_PUBLIC_SECOND_MINT_NFT_CONTRACT=
 NEXT_PUBLIC_SECOND_MINT_COLLECTION_NAME=
+NEXT_PUBLIC_BACKGROUND_COLOR=
